##################################################
 Revision history for Log::Log4perl
##################################################

1.30 (not yet released)
   *    (ms) [RT 59617] Fixed system-wide threshold without appender
             thresholds. Bug reported by Dmitry Bigunyak.

1.29 (2010/06/16)
   *    (ms) Added documentation on how to use Log4perl's :easy macros
             with Catalyst in Log::Log4perl::Catalyst.
   *    (ms) wrapper_register() now deals with caller_depth automatically.
             Backwards compatibility with old wrapper classes using 
             caller_depth directly is provided. Documentation has been 
             updated.
   *    (ms) Felix Antonius Wilhelm Ostmann reported Resurrector.pm 
             crashes, fixed as suggested by setting the %INC value to 
             the module path.
   *    (ms) Another caller_depth fix in Log::Log4perl::Catalyst.
   *    (ms) Fixed logdie() caller_depth bug reported by Rob Retter.
   *    (ms) [RT 56145] Saving errstr in DBI appender to survive ping()
   *    (ms) Added INTERNAL_DEBUG env variable to test suite triggering
             all _INTERNAL_DEBUG statements to be printed for better
             error diagnosis on misbehaving systems.

1.28 (2010/02/24)
   *    (ms) Fixed caller stack with Buffer composite appender
   *    (ms) Fixed 'local caller_depth' error in various places. First
             localizing a variable and then increasing it is incorrect,
             as this ignores previous settings. The correct way of
             increasing the caller level is: 'local depth = depth + 1'.
   *    (ms) Added Log::Log4perl::Catalyst for use in Catalyst applications.

1.27 (2010/02/07)
   *    (ms) ***WARNING: This might break backward compatibility 
                         with some wrapper classes. 
             [RT 52913] Fixed category fetching in
             wrapper classes (reported by Martin Evans). Wrapper classes