@@ -5,6 +5,10 @@
 1.30 (not yet released)
    *    (ms) [RT 59617] Fixed system-wide threshold without appender
              thresholds. Bug reported by Dmitry Bigunyak.
+   *    (ms) [RT 24884] Using require() instead of incomplete
+             logic in L4p::Util::module_available(). local __DIE__
+             handler takes care of user-defined __DIE__ handlers 
+             ignoring $^S (suggested by Eric Wilhelm and others).
 
 1.29 (2010/06/16)
    *    (ms) Added documentation on how to use Log4perl's :easy macros
